QR code scan and choose file from gallery
You can search task with QR Code using camera or gallery

--- a/ios-task/ios-task/Core/Supported/Info.plist
+++ b/ios-task/ios-task/Core/Supported/Info.plist
@@ -19,5 +19,7 @@
 			</array>
 		</dict>
 	</dict>
+    <key>NSCameraUsageDescription</key>
+    <string>We need access to your camera to scan QR codes.</string>
 </dict>
 </plist>
